// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SingleImageView should match snapshot 1`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-name"
      data-testid="image-name"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none post__embed-visibility color--link"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        name
      </div>
    </div>
    <div
      className="image-container"
      style={Object {}}
    >
      <div
        className="image-loaded  "
        style={Object {}}
      >
        <SizeAwareImage
          className=""
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          fileInfo={
            Object {
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "name": "name",
              "post_id": "post_id",
              "width": 350,
            }
          }
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 2`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-name"
      data-testid="image-name"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none post__embed-visibility color--link"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        name
      </div>
    </div>
    <div
      className="image-container"
      style={Object {}}
    >
      <div
        className="image-loaded image-fade-in "
        style={Object {}}
      >
        <SizeAwareImage
          className=""
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          fileInfo={
            Object {
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "name": "name",
              "post_id": "post_id",
              "width": 350,
            }
          }
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
    <Connect(ViewImageModal)
      fileInfos={
        Array [
          Object {
            "extension": "jpg",
            "has_preview_image": true,
            "height": 200,
            "id": "file_info_id",
            "name": "name",
            "post_id": "post_id",
            "width": 350,
          },
        ]
      }
      onModalDismissed={[Function]}
      postId="original_post_id"
      show={false}
    />
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 1`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-name"
      data-testid="image-name"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none post__embed-visibility color--link"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        name_svg
      </div>
    </div>
    <div
      className="image-container"
      style={
        Object {
          "height": 350,
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="image-loaded  svg"
        style={Object {}}
      >
        <SizeAwareImage
          className=""
          dimensions={
            Object {
              "height": undefined,
              "width": undefined,
            }
          }
          fileInfo={
            Object {
              "extension": "svg",
              "id": "svg_file_info_id",
              "name": "name_svg",
              "post_id": "post_id",
            }
          }
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          src="/api/v4/files/svg_file_info_id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 2`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-name"
      data-testid="image-name"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none post__embed-visibility color--link"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        name_svg
      </div>
    </div>
    <div
      className="image-container"
      style={
        Object {
          "height": 350,
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="image-loaded image-fade-in svg"
        style={Object {}}
      >
        <SizeAwareImage
          className=""
          dimensions={
            Object {
              "height": undefined,
              "width": undefined,
            }
          }
          fileInfo={
            Object {
              "extension": "svg",
              "id": "svg_file_info_id",
              "name": "name_svg",
              "post_id": "post_id",
            }
          }
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          src="/api/v4/files/svg_file_info_id"
        />
      </div>
    </div>
    <Connect(ViewImageModal)
      fileInfos={
        Array [
          Object {
            "extension": "svg",
            "id": "svg_file_info_id",
            "name": "name_svg",
            "post_id": "post_id",
          },
        ]
      }
      onModalDismissed={[Function]}
      postId="original_post_id"
      show={false}
    />
  </div>
</div>
`;

exports[`components/SingleImageView should set loaded state on callback of onImageLoaded on SizeAwareImage component 1`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-name"
      data-testid="image-name"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none post__embed-visibility color--link"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        name
      </div>
    </div>
    <div
      className="image-container"
      style={Object {}}
    >
      <div
        className="image-loaded image-fade-in "
        style={Object {}}
      >
        <SizeAwareImage
          className=""
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          fileInfo={
            Object {
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "name": "name",
              "post_id": "post_id",
              "width": 350,
            }
          }
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
    <Connect(ViewImageModal)
      fileInfos={
        Array [
          Object {
            "extension": "jpg",
            "has_preview_image": true,
            "height": 200,
            "id": "file_info_id",
            "name": "name",
            "post_id": "post_id",
            "width": 350,
          },
        ]
      }
      onModalDismissed={[Function]}
      postId="original_post_id"
      show={false}
    />
  </div>
</div>
`;
